lintian (2.5.7) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Removed:
      - ancient-dpkg-long-filenames-check
      - ancient-dpkg-predepends-check
      - doc-base-file-references-usr-doc
      - manpage-for-non-x11-binary-in-wrong-directory
      - manpage-for-x11-binary-in-wrong-directory
      - obsolete-field
      - old-app-defaults-directory
      - old-style-copyright-file
      - old-style-example-dir
      - package-installs-file-to-usr-x11r6-bin
      - package-installs-font-to-usr-x11r6
      - package-uses-obsolete-file
      - postinst-should-not-set-usr-doc-link
      - x11-games-should-be-in-usr-games

  * checks/copyright-file{,.desc}:
    + [NT] Remove old tags.
  * checks/fields{,.desc}:
    + [NT] Remove old tags.
  * checks/files{,.desc}:
    + [NT] Remove old tags.
    + [NT] Remove "manual" lazy loads of data files.
  * checks/manpages{,.desc}:
    + [NT] Remove old tags.
  * checks/menus{,.desc}:
    + [NT] Remove "manual" lazy load of data file.
    + [NT] Remove old tags.
  * checks/scripts{,.desc}:
    + [NT] Remove old tags.

  * collection/objdump-info:
    + [NT] Use "fail" from Util.pm rather than embedding a copy of
      it.
    + [NT] Use Lintian::Collect to find ELF files.

  * frontend/lintian:
    + [JW] Fix typo in error message.

  * lib/Lintian/Architecture.pm:
    + [NT] Lazily evaluate the data file.
  * lib/Lintian/Data.pm:
    + [NT] Lazily load data files.

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100

lintian (2.5.6) unstable; urgency=low

  * checks/*:
    + [NT] Simplified some bit operations done on file permissions.
  * checks/binaries:
    + [NT] Fix false-negative missing-dependency-on-phpapi when the
      binary included a "SOVERSION" in its name.  Thanks to Ondřej
      Surý for the report.  (Closes: #662936)
  * checks/changelog-file:
    + [NT] Do not emit "no-upstream-changelog" for transitional
      packages.  Thanks to Paul Wise for the report.