@@ -12,11 +12,10 @@ Enable-Tags: FSSTND-dir-in-usr, FSSTND-dir-in-var, arch-dependent-file-in-usr-sh
  copyright-file-is-symlink, copyright-refers-to-incorrect-directory,
  copyright-refers-to-old-directory,
  debian-control-file-uses-obsolete-national-encoding,
- debian-control-with-duplicate-fields, debian-rules-missing-required-target,
- debian-rules-not-a-makefile, description-is-dh_make-template,
- description-synopsis-is-empty, dir-or-file-in-mnt, dir-or-file-in-opt,
- dir-or-file-in-srv, dir-or-file-in-tmp, dir-or-file-in-var-www,
- embedded-library, extended-description-is-empty,
+ debian-rules-missing-required-target, debian-rules-not-a-makefile,
+ description-is-dh_make-template, description-synopsis-is-empty,
+ dir-or-file-in-mnt, dir-or-file-in-opt, dir-or-file-in-srv, dir-or-file-in-tmp,
+ dir-or-file-in-var-www, embedded-library, extended-description-is-empty,
  file-in-etc-not-marked-as-conffile, file-in-usr-marked-as-conffile,
  forbidden-postrm-interpreter, install-info-used-in-maintainer-script,
  library-in-debug-or-profile-should-not-be-stripped, magic-arch-in-arch-list,
@@ -47,12 +46,11 @@ Tags: FSSTND-dir-in-usr, FSSTND-dir-in-var, bad-package-name, bad-relation, bad-
  copyright-file-is-symlink, copyright-refers-to-incorrect-directory,
  copyright-refers-to-old-directory,
  debian-control-file-uses-obsolete-national-encoding,
- debian-control-with-duplicate-fields, debian-rules-missing-required-target,
- debian-rules-not-a-makefile, description-is-dh_make-template,
- description-synopsis-is-empty, dir-or-file-in-mnt, dir-or-file-in-opt,
- dir-or-file-in-srv, dir-or-file-in-tmp, extended-description-is-empty,
- file-in-etc-not-marked-as-conffile, file-in-usr-marked-as-conffile,
- forbidden-postrm-interpreter,
+ debian-rules-missing-required-target, debian-rules-not-a-makefile,
+ description-is-dh_make-template, description-synopsis-is-empty,
+ dir-or-file-in-mnt, dir-or-file-in-opt, dir-or-file-in-srv, dir-or-file-in-tmp,
+ extended-description-is-empty, file-in-etc-not-marked-as-conffile,
+ file-in-usr-marked-as-conffile, forbidden-postrm-interpreter,
  library-in-debug-or-profile-should-not-be-stripped, magic-arch-in-arch-list,
  maintainer-address-is-on-localhost, maintainer-address-malformed,
  maintainer-address-missing, maintainer-name-missing,
