@@ -4,7 +4,9 @@ lintian (2.5.7) UNRELEASED; urgency=low
     + Removed:
       - ancient-dpkg-long-filenames-check
       - ancient-dpkg-predepends-check
+      - debian-control-with-duplicate-fields
       - doc-base-file-references-usr-doc
+      - duplicate-fields-in-templates
       - manpage-for-non-x11-binary-in-wrong-directory
       - manpage-for-x11-binary-in-wrong-directory
       - obsolete-field
@@ -19,6 +21,10 @@ lintian (2.5.7) UNRELEASED; urgency=low
 
   * checks/copyright-file{,.desc}:
     + [NT] Remove old tags.
+  * checks/control-file{,.desc}:
+    + [NT] Remove redundant tag.
+  * checks/debconf{,.desc}:
+    + [NT] Remove redundant tag.
   * checks/fields{,.desc}:
     + [NT] Remove old tags.
   * checks/files{,.desc}:
@@ -44,6 +50,10 @@ lintian (2.5.7) UNRELEASED; urgency=low
     + [NT] Lazily evaluate the data file.
   * lib/Lintian/Data.pm:
     + [NT] Lazily load data files.
+  * lib/Util.pm:
+    + [JW] Consider duplicate fields a syntax error in dctrl files.
+      Previously, duplicate fields were silently ignored (except
+      when a separate tag would check for it).  (Closes: #664061)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Mar 2012 22:55:46 +0100
 
